--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-anthropic==0.47.2
-pdf2image==1.17.0
-Pillow==11.0.0
-PyPDF2==3.0.1
-python-dotenv==0.21.0
-requests==2.31.0
-streamlit==1.38.0
+anthropic
+pdf2image
+Pillow
+PyPDF2
+python-dotenv
+requests
+streamlit
